kubernetes/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: thought-bubbles-hop-backend
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: thought-bubbles-hop-backend
